# cedar-intent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_proposal.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cedar_intent/: __init__.py  __main__.py  cli.py  compiler.py  deployment.py  errors.py  migrations.py  requirements.py  scenarios.py  schema.py  scope_json.py  scopes.py  validation.py  verification.py  workspace.py
cedar_intent/generator/: __init__.py  base.py  litellm.py  offline.py
cedar_intent/policies/: __init__.py  base.py  compiled.py  draft.py  existing.py
cedar_intent/storage/: __init__.py  base.py  memory.py  sqlite.py
docs/: architecture.md  cli.md  coverage.md  deployment.md  python-api.md  verification.md
examples/: README.md  api_examples.py
examples/photoflash/: README.md
examples/photoflash/hr/: scenarios.json  schema.json
examples/photoflash/hr/policies/: p1.cedar
examples/photoflash/hr/requirements/: HR-001.md  HR-042.md
examples/photoflash/scripts/: run.sh
examples/todo/: README.md  run.sh
examples/todo/tasks/: schema.json
tests/: conftest.py  test_cli.py  test_compiler.py  test_deployment.py  test_generator.py  test_policies.py  test_requirements.py  test_scenarios.py  test_schema.py  test_scopes.py  test_storage.py  test_validation.py  test_verification.py  test_verify_deploy_cli.py  test_workspace.py  test_workspace_verify_deploy.py
(+3 files in other folders)
