[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cedar-intent"
version = "0.5.0"
description = "Compile organizational authorization intent into validated Cedar policies."
requires-python = ">=3.11"
dependencies = [
    "cedarpy>=4.8.7,<5",
    "litellm>=1,<2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
cedar-intent = "cedar_intent.cli:main"

[tool.setuptools]
packages = [
    "cedar_intent",
    "cedar_intent.policies",
    "cedar_intent.generator",
    "cedar_intent.storage",
]

[tool.setuptools.package-data]
cedar_intent = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.mypy]
files = ["cedar_intent"]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["cedarpy", "litellm"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that require SQLite or external resources",
]
